# promptdb

./: .gitignore  Cargo.toml  README.md  icons.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  models.rs  store.rs  updater.rs
tasks/: todo.md
ui/: app.slint
