[package]
name = "promptdb"
version = "2.0.0"
edition = "2021"
description = "PromptDB - Offline Prompt Storage (native Rust/Slint rewrite)"
license = "GPL-3.0-or-later"

[dependencies]
slint = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"       # native file dialogs (import/export)
ureq = { version = "2", features = ["json"] }  # tiny blocking HTTP for update check
semver = "1"
open = "5"         # open release page in default browser
chrono = { version = "0.4", features = ["clock"], default-features = false }
uuid = { version = "1", features = ["v4"] }
arboard = "3"     # cross-platform clipboard (Copy is the app's primary action)

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "z"    # optimize for size (lightweight goal)
lto = true
strip = true
panic = "abort"
codegen-units = 1
